# lieroy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  graham_build.sh  lieroy-config.cmake.in
include/: util.h  util.hpp
include/lieroy/: algebra_se3.h  algebra_se3.hpp  algebra_so3.h  algebra_so3.hpp  normal_random_variable.hpp  se3.h  se3.hpp  se3_distribution.h  se3_distribution.hpp  se3_gaussian_distribution.h  se3_gaussian_distribution.hpp  se3_uniform_distribution.h  se3_uniform_distribution.hpp  so3.h  so3.hpp  so3_distribution.h  so3_distribution.hpp  so3_uniform_distribution.h  so3_uniform_distribution.hpp  util.h  util.hpp
include/pylie/: algebra_se3.h  algebra_se3.hpp  se3.hpp  se3_distribution.h  se3_gaussian_distribution.h  se3_gaussian_distribution.hpp  se3_uniform_distribution.h  se3_uniform_distribution.hpp  so3.h  so3.hpp
python/: CMakeLists.txt  setup.py.in  test_wrapper.py
python/lieroy/: lieroy_core.cpp  parallel.py  se3.py  so3.py
python/pylie/: __init__.py  pylie.cpp
python/test/: visual_validation.py
python_bindings/: CMakeLists.txt  pylie.cpp
src/: algebra_se3.h  algebra_se3.hpp  algebra_so3.h  algebra_so3.hpp  distribution_of_se3.cpp  normal_random_variable.hpp  se3.h  se3.hpp  se3_distribution.h  se3_gaussian_distribution.h  se3_uniform_distribution.h  so3.h  so3.hpp
test/: CMakeLists.txt  test_se3.cpp  test_se3_gaussian_distribution.cpp  test_se3_gaussian_distribution_medium.cpp  test_se3_medium.cpp  test_se3_uniform_distribution.cpp  test_so3.cpp  test_so3_medium.cpp  test_util.cpp
